# wgpurust3dgame

./: Cargo.toml  README.md  generate_textures.py
src/: main.rs
src/camera/: config.rs  mod.rs
src/control/: mod.rs
src/core/: colors.rs  config.rs  mod.rs
src/floor/: colors.rs  config.rs  mod.rs
src/player/: colors.rs  config.rs  mod.rs
src/render/: mod.rs  renderer.rs  shader.wgsl  shadow.wgsl  skybox.wgsl  texture.rs  vertex.rs
src/sky/: colors.rs  config.rs  mod.rs
src/world/: mod.rs
src/world/high_building/: colors.rs  mod.rs
src/world/prefabs/: mod.rs
src/world/prefabs/static_objs/: mod.rs
src/world/prefabs/static_objs/buildings/: mod.rs
src/world/prefabs/static_objs/buildings/building01/: mod.rs
src/world/prefabs/static_objs/buildings/building02/: mod.rs
src/world/prefabs/static_objs/grounds/: mod.rs
src/world/prefabs/static_objs/grounds/ground01/: mod.rs
src/world/prefabs/static_objs/streetlights/: mod.rs
src/world/prefabs/static_objs/streetlights/streetlight01/: mod.rs
src/world/pyramid/: colors.rs  mod.rs
src/world/street_light/: mod.rs
src/world/world01/gltf/grounds/ground01/: ground01.gltf
